--- a/setup/static/css/login_cadastro/label.css
+++ b/setup/static/css/login_cadastro/label.css
@@ -5,3 +5,8 @@
 .label__login--foto:hover{
     cursor: pointer;
 }
+@media  screen and (max-width:767px){
+    .label__login{
+        margin-top: 0.5rem;
+    }
+}
