--- a/setup/static/css/login_cadastro/titulo.css
+++ b/setup/static/css/login_cadastro/titulo.css
@@ -7,3 +7,11 @@
 .texto__login{
     margin-top: 1rem;
 }
+@media  screen and (max-width:767px){
+    .Titulo__login{
+        font-size: 1rem;
+        font-weight: bold;
+        margin-top: 0;
+        font-family: 'Mochiy Pop P One', sans-serif;
+    }
+}
