--- a/setup/static/css/postagem/ul.css
+++ b/setup/static/css/postagem/ul.css
@@ -2,3 +2,9 @@
     display: flex;
     padding-left: 1rem;
 }
+@media  screen and (max-width:767px){
+    .ul__postagem{
+        display: flex;
+        padding-left: 0;
+    }
+}
