--- a/setup/static/css/visualizar_post/lista.css
+++ b/setup/static/css/visualizar_post/lista.css
@@ -4,3 +4,8 @@
     margin-left: 1rem;
     word-wrap: break-word;
 }
+@media  screen and (max-width:767px){
+    .lista__post{
+        margin-left: 1rem;
+    }
+}
