--- a/instagram/templates/inbox.html
+++ b/instagram/templates/inbox.html
@@ -10,7 +10,7 @@
                         {% if mensagens %}
                             <ul>
                                 {% for mensagem in mensagens %}
-                                    <a class="link__mensagem" href="">
+                                    <a class="link__mensagem" href="{% url 'inbox' mensagem.emissario.pk %}">
                                         <li class="lista__mensagem">
                                             <img class="usuario__postagem usuario__postagem--lista" src="{{ mensagem.emissario.foto.url }}" alt="">
                                             <h4 class="nome_user__mensagem">{{ mensagem.emissario.nome }}</h4>
