--- a/setup/static/css/direct/container.css
+++ b/setup/static/css/direct/container.css
@@ -31,3 +31,29 @@
     display: flex;
     border-bottom: 1px solid;
 }
+@media  screen and (max-width:767px){
+    .container_direct__mensagem{
+        border: 1px solid #f5f5f5;
+        margin-top: 6rem;
+        margin-left: auto;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        width: 100%;
+        height: auto;
+        margin-right: auto;
+    }
+    .container_mensage__mensagem{
+        border-left: 1px solid #f5f5f5;
+        overflow-y: scroll;
+        height: 21rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .container_direct__mensagem{
+        grid-template-columns: 40% 60%;
+        width: 100%;
+    }
+    .container_mensage__mensagem{
+        height: 21rem;
+    }
+}
