--- a/setup/static/css/editar_perfil/form.css
+++ b/setup/static/css/editar_perfil/form.css
@@ -1,10 +1,15 @@
 .form__edita{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 30rem;
+    width: auto;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid #f5f5f5;
     padding: 1rem;
     margin-top: 8rem;
+}
+@media  screen and (max-width:767px){
+    .form__edita{
+        width: auto;
+    }
 }
