--- a/setup/static/css/editar_perfil/imagem.css
+++ b/setup/static/css/editar_perfil/imagem.css
@@ -1,6 +1,6 @@
 .imagem_perfil__edita{
-    width: 2rem;
-    height: 2rem;
+    width: 4rem;
+    height: 4rem;
     border-radius: 100%;
 }
 .imagem__edita{
@@ -12,4 +12,10 @@
     grid-column-end: 3;
     margin-right: auto;
     margin-left: auto;
+}
+@media  screen and (max-width:767px){
+    .imagem_perfil__edita{
+        width: 3rem;
+        height: 3rem;
+    }
 }
