--- a/setup/static/css/header/div.css
+++ b/setup/static/css/header/div.css
@@ -13,3 +13,21 @@
     padding-top: 1rem;
     padding-left: 2rem;
 }
+@media  screen and (max-width:767px){
+    .container_pesquisa__header{
+        margin-top: 0;
+        background-color: #f5f5f5;
+        height: auto;
+    }
+    .div_pesquisa__header{
+        display: flex;
+        padding-top: 1rem;
+        padding-left: 0;
+    }
+
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .div__header{
+        margin-left: 2rem;
+    }
+}
