--- a/setup/static/css/header/header.css
+++ b/setup/static/css/header/header.css
@@ -53,3 +53,26 @@
     right: 9rem;
     top: 3rem;
 }
+@media  screen and (max-width:767px){
+    .header__header{
+        position: fixed;
+        height: 3rem;
+        border-bottom: 1px solid #f5f5f5;
+        width: 100%;
+        background-color: whitesmoke;
+    }
+    
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .header__header{
+        height: 3rem;
+    }
+    .container_log__header--ativo{
+        margin-top: 0;
+        margin-right: .2rem;
+    }
+    .container_likes__header--ativo{
+        right: 0;
+        margin-top: 0;
+    }
+}
