--- a/setup/static/css/header/lista.css
+++ b/setup/static/css/header/lista.css
@@ -5,3 +5,13 @@
     display: flex;
     margin-left: 1rem;
 }
+@media  screen and (max-width:767px){
+    .lista__header{
+        margin-left: 1rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .lista__header{
+        margin-left: 8rem;
+    }
+}
