--- a/setup/static/css/header/titulo.css
+++ b/setup/static/css/header/titulo.css
@@ -24,3 +24,13 @@
     margin-top: 0.5rem;
     font-weight: bold;
 }
+@media  screen and (max-width:767px){
+    .titulo_pesquisa__header{
+        margin-left: 0;
+        margin-top: 0;
+        font-weight: bold;
+    }
+    .titulo__header{
+        margin-top: 0.5rem;
+    }
+}
