--- a/setup/static/css/header/ul.css
+++ b/setup/static/css/header/ul.css
@@ -4,3 +4,16 @@
     padding-left: 10rem;
     padding-top: 1rem;
 }
+@media  screen and (max-width:767px){
+    .container__header{
+        display: flex;
+        justify-content: space-between;
+        padding-left: 0;
+        padding-top: 0;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .container__header{
+        padding-left: 1rem;
+    }
+}
