--- a/setup/static/css/login_cadastro/containers.css
+++ b/setup/static/css/login_cadastro/containers.css
@@ -1,10 +1,10 @@
 .container__login{
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 50% 50%;
     text-align: center;
     margin-top: 6rem;
-    height: 25rem;
-    margin-left: 14%;
+    height: 26rem;
+    
 }
 .container_img__login{
     background-image: url("/static/imagem/pexels-elina-fairytale-3865624.jpg");
@@ -14,9 +14,33 @@
 .container_form__login{
     
     border: 1px solid #f5f5f5;
-    width: 30rem;
+    width: 100%;
 }
 .container_img__login--cadastro{
     width: 100%;
-    height: 100%;
+    height: 26rem;
+}
+.divide_container__login--cadastro{
+    display: flex;
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media  screen and (max-width:767px){
+    .container__login{
+        display: grid;
+        grid-template-columns: 55% 45%;
+        text-align: center;
+        margin-top: 9rem;
+        height: 0;
+        margin-left: 0;
+    }
+    .container_form__login{
+        border: 1px solid #f5f5f5;
+        width: auto;
+    }
+    .container_img__login--cadastro{
+        height: 100%;
+    }
+
 }
