--- a/setup/static/css/login_cadastro/input.css
+++ b/setup/static/css/login_cadastro/input.css
@@ -1,11 +1,12 @@
 .input__login--texto{
     width: 20rem;
-    margin-left: 5rem;
+    margin-left: auto;
     margin-top: 0.5rem;
     border-radius: 10px;
     background-color: white;
     border: none;
     text-align: center;
+    margin-right: auto;
 }
 .input__login--texto:focus{
     box-shadow: 0 0 0 0;
@@ -13,9 +14,7 @@
     outline: 0;
 }
 .input__login--submit{
-    width: 10rem;
-    margin-left: auto;
-    margin-right: 4.5rem;
+    
     margin-top: 2rem;
     background-color: white;
     border: none;
@@ -23,4 +22,42 @@
 .input__login--submit:hover{
     cursor: pointer;
     font-weight: bold;
+}
+.link__login--cadastro{
+    text-decoration: none;
+    color: black;
+    margin-right: 2rem;
+}
+.link__login--cadastro:hover{
+    cursor: pointer;
+    font-weight: bold;
+}
+.titulo__login--cadastro{
+    margin-top: 2rem;
+}
+@media  screen and (max-width:767px){
+    .input__login--texto{     
+        width: 5rem;
+        margin-left: auto;
+        margin-top: 0.2rem;
+        border-radius: 10px;
+        background-color: white;
+        border: none;
+        text-align: center;
+        margin-right: auto;
+    }
+    .input__login--submit{
+        background-color: white;
+        border: none;
+        
+    }
+    .link__login--cadastro{
+        text-decoration: none;
+        color: black;
+        margin-right: 2rem;
+    }
+    .link__login--cadastro:hover{
+        cursor: pointer;
+        font-weight: bold;
+    }
 }
