--- a/setup/static/css/perfil/imagem.css
+++ b/setup/static/css/perfil/imagem.css
@@ -3,8 +3,16 @@
     width: 5rem;
     height: 5rem;
     border-radius: 100%;
+    margin-left: 10rem;
 }
 .imagem_post__perfil{
-    width: 20rem;
+    width: 100%;
     height: 20rem;
+    margin: 10%;
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .imagem_post__perfil{
+        width: 100%;
+        height: 20rem;
+    }
 }
