--- a/setup/static/css/perfil/link.css
+++ b/setup/static/css/perfil/link.css
@@ -1,6 +1,14 @@
 .link__perfil{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    margin-right: 3.9rem;
     background-color: white;
+}
+.link_header__perfil{
+    margin-top: 3rem;
+    margin-left: 3rem;
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .link__perfil{
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        background-color: white;
+    }
 }
