--- a/setup/static/css/postagem/container.css
+++ b/setup/static/css/postagem/container.css
@@ -19,3 +19,19 @@
     padding-left: 0.6rem;
     margin-bottom: 0.5rem;
 }
+@media  screen and (max-width:767px){
+    .container__postagem{
+        margin-left: auto;
+        margin-top: 4rem;
+        width: 100%;
+        border: 1px solid #f5f5f5;
+        margin-bottom: 1rem;
+        margin-right: auto;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .container__postagem{
+        margin-top: 4rem;
+        width: 100%;
+    }
+}
