--- a/setup/static/css/postagem/imagem.css
+++ b/setup/static/css/postagem/imagem.css
@@ -2,3 +2,13 @@
     width: 100%;
     height: 30rem;
 }
+@media  screen and (max-width:767px){
+    .imagem__postagem{
+        height: 20rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .imagem__postagem{
+        height: 28rem;
+    }
+}
