--- a/setup/static/css/publicar/container.css
+++ b/setup/static/css/publicar/container.css
@@ -8,3 +8,15 @@
     border: 1px solid #f5f5f5;
     padding: 1rem;
 }
+@media  screen and (max-width:767px){
+    .container__publicar{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 6rem;
+        border: 1px solid #f5f5f5;
+        padding: 1rem;
+    }
+}
