--- a/setup/static/css/publicar/imagem.css
+++ b/setup/static/css/publicar/imagem.css
@@ -12,3 +12,20 @@
     grid-column-start: 1;
     grid-column-end: 3;
 }
+@media  screen and (max-width:767px){
+    .imagem_postada__publicar{
+        width: 100%;
+        height: 15rem;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .imagem_postada__publicar{
+        height: 20rem;
+    }
+    .imagem__publicar{
+        width: 4rem;
+        height: 4rem;
+    }
+}
