--- a/setup/static/css/publicar/input.css
+++ b/setup/static/css/publicar/input.css
@@ -23,3 +23,8 @@
 .input__publicar--button:hover{
     cursor: pointer;
 }
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .titulo__publicar{
+        margin-top: 1.5rem;
+    }
+}
