--- a/setup/static/css/sugestoes/container.css
+++ b/setup/static/css/sugestoes/container.css
@@ -10,3 +10,13 @@
     margin-top: 10%;
     
 }
+@media  screen and (max-width:767px){
+    .container__sugestoes{
+        display: none;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px){
+    .container__sugestoes{
+        display: none;
+    }
+}
