--- a/setup/static/css/header/div.css
+++ b/setup/static/css/header/div.css
@@ -1,7 +1,7 @@
 .div__header{
     display: flex;
     padding-right: 10rem;
-    margin-left: 10%;
+    margin-left: 3%;
 }
 .container_pesquisa__header{
     margin-top: 1rem;
@@ -13,7 +13,10 @@
     padding-top: 1rem;
     padding-left: 2rem;
 }
-@media  screen and (max-width:767px){
+@media  screen and (max-width:424px){
+    .div__header{
+        margin-left: 2%;
+    }
     .container_pesquisa__header{
         margin-top: 0;
         background-color: #f5f5f5;
@@ -24,7 +27,21 @@
         padding-top: 1rem;
         padding-left: 0;
     }
-
+}
+@media  screen and (min-width:425px) and (max-width:767){
+    .container_pesquisa__header{
+        margin-top: 0;
+        background-color: #f5f5f5;
+        height: auto;
+    }
+    .div_pesquisa__header{
+        display: flex;
+        padding-top: 1rem;
+        padding-left: 0;
+    }
+    .div__header{
+        margin-left: 5%;
+    }
 }
 @media screen and (min-width: 768px) and (max-width:1023px){
     .div__header{
