--- a/setup/static/css/header/header.css
+++ b/setup/static/css/header/header.css
@@ -7,42 +7,29 @@
 }
 .container_log__header{
     display: none;
-    margin-top: 1rem;
-    width: 8rem;
-    margin-left: auto;
-    margin-right: 6.5rem;
-    border: 1px solid #f5f5f5 ;
-    text-align: center;
-    height: 2rem;
-    padding-top: 0.5rem;
-    background-color:whitesmoke ;
+    
 }
 .container_log__header--ativo{
-    
-    margin-top: 1rem;
+    margin-top: 3rem;
     width: 8rem;
-    margin-left: auto;
-    margin-right: 7.2rem;
-    border: 1px solid #f5f5f5 ;
+    margin-left: 11.2rem;
+    
+    border: 1px solid #f5f5f5;
+    position: fixed;
     text-align: center;
     height: 5rem;
     padding-top: 0.5rem;
-    background-color:whitesmoke ;
+    background-color: whitesmoke;
+}
+.container_menu__header{
+    display: none;
 }
 .container_likes__header{
     display: none;
-    margin-top: 0.5rem;
-    width: 15rem;
-    border: 1px solid#f5f5f5 ;;
-    margin-right: 6.5rem;
-    background-color: whitesmoke;
-    margin-left: auto;
-    height: 4rem;
-    overflow: scroll;
-    overflow-x: hidden;
+    
 }
 .container_likes__header--ativo{
-    margin-top: 0.5rem;
+    margin-top: 3rem;
     width: 15rem;
     border: 1px solid#f5f5f5;
     background-color: whitesmoke;
@@ -50,10 +37,9 @@
     overflow: scroll;
     overflow-x: hidden;
     position: fixed;
-    right: 9rem;
-    top: 3rem;
+    margin-left: 5rem;
 }
-@media  screen and (max-width:767px){
+@media  screen and (max-width:424px){
     .header__header{
         position: fixed;
         height: 3rem;
@@ -61,18 +47,52 @@
         width: 100%;
         background-color: whitesmoke;
     }
-    
+    .container_menu__header{
+        display: block;
+        position: fixed;
+        width: 8rem;
+        background-color: #f5f5f5;
+        margin-top: 3rem;
+        right: 0.1rem;
+        text-align: center;
+    }
+    .container_likes__header--ativo{
+        margin-top: 3rem;
+        right: 0.1rem;
+    }
+}
+@media  screen and (min-width:425px) and (max-width:767){
+    .header__header{
+        position: fixed;
+        height: 3rem;
+        border-bottom: 1px solid #f5f5f5;
+        width: 100%;
+        background-color: whitesmoke;
+    }
+    .container_likes__header--ativo{
+        margin-top: 3rem;
+        right: 0.1rem;
+    }
+    .container_menu__header{
+        display: block;
+        position: fixed;
+        width: 8rem;
+        background-color: #f5f5f5;
+        margin-top: 3rem;
+        right: 0.1rem;
+        text-align: center;
+    }
 }
 @media screen and (min-width: 768px) and (max-width:1023px){
     .header__header{
         height: 3rem;
     }
     .container_log__header--ativo{
-        margin-top: 0;
-        margin-right: .2rem;
+        margin-top: 2rem;
+        width: 8.2rem;
     }
     .container_likes__header--ativo{
-        right: 0;
-        margin-top: 0;
+        margin-top: 2rem;
+        margin-left: 4.3rem;
     }
 }
