--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{% static 'css/header/input.css' %}">
         <link rel="stylesheet" href="{% static 'css/header/titulo.css' %}">
         <link rel="stylesheet" href="{% static 'css/header/link.css' %}">
-        <link rel="stylesheet" href="{% static 'css/header/icones.css' %}">
+        <link rel="stylesheet" href="{% static 'css/header/icon.css' %}">
         <link rel="stylesheet" href="{% static 'css/header/div.css' %}">
         <link rel="stylesheet" href="{% static 'css/header/lista.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -70,6 +70,7 @@
         <link rel="stylesheet" href="{% static 'css/editar_perfil/label.css' %}">
         <link rel="stylesheet" href="{% static 'css/editar_perfil/input.css' %}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <link rel="shortcut icon" type="imagex/png" href="{% static 'imagem/camera.ico' %}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
