--- a/setup/static/css/direct/form.css
+++ b/setup/static/css/direct/form.css
@@ -1,9 +1,11 @@
 .formulario_inbox__mensagem{
     position: absolute;
-    bottom: 1rem;
+    margin-top: 30rem;
+    margin-left: 10rem;
     display: flex;
-    width: 39.2rem;
+    width: 40rem;
     height: 2rem;
+    
 }
 .input_text_inbox__mensagem{
     width: 35rem;
@@ -15,7 +17,7 @@
     outline: 0;
 }
 .input_submit_inbox__mensagem{
-    width: 3.9rem;
+    width: 5rem;
     background-color: white;
     border: none;
 }
@@ -28,12 +30,30 @@
         display: flex;
         width: 70%;
         height: 2rem; 
-        top: 27rem;
+        margin-left: 30%;
+    }
+    .input_text_inbox__mensagem{
+        width: 60%;
+        border: 0 none;
+    }
+    .input_submit_inbox__mensagem{
+        width: 40%;
+        background-color: white;
+        border: none;
     }
 }
 @media screen and (min-width: 768px) and (max-width:1023px){
     .formulario_inbox__mensagem{
-        width: 29rem;
-        bottom: 4rem;
+        width: 60%;
+        margin-left: 40%;
+    }
+    .input_submit_inbox__mensagem{
+        width: 30%;
+        background-color: white;
+        border: none;
+    }
+    .input_text_inbox__mensagem{
+        width: 70%;
+        border: 0 none;
     }
 }
