--- a/setup/static/css/header/icon.css
+++ b/setup/static/css/header/icon.css
@@ -9,6 +9,9 @@
     width: 1.5rem;
     margin-right: 2rem;
 }
+.icone__notificacao:hover{
+    cursor: pointer;
+}
 .icone_menu__header{
     display: none;
     height: 1.5rem;
@@ -30,26 +33,27 @@
     border-radius: 100%;
     
 }
-@media  screen and (max-width:424px){
+@media  screen and (min-width:320px) and (max-width:374px) {
     .icone__header{
-        display: none;
-    }
-    .icone_menu__header{
-        display:block;
-        height: 1.5rem;
-        width: 1.5rem;
-        margin-top: 0.5rem;
-        margin-left: 1rem;
+        margin-right: 0.8rem;
     }
     .icone__notificacao{
-        height: 1.5rem;
-        width: 1.5rem;
-        margin-right: 0;
-        margin-top: 0.5rem;
+        margin-right: 0.8rem;
     }
 }
-@media  screen and (min-width:425px) and (max-width:767){
+@media  screen and (min-width:375px) and (max-width:424px) {
+    .icone__header{
+        margin-right: 1rem;
+    }
     .icone__notificacao{
-        margin-right: 3rem;
+        margin-right: 1rem;
+    }
+}
+@media  screen and (min-width:425px) and (max-width:767px) {
+    .icone__header{
+        margin-right: 1.5rem;
+    }
+    .icone__notificacao{
+        margin-right: 1.5rem;
     }
 }
