--- a/setup/static/css/header/input.css
+++ b/setup/static/css/header/input.css
@@ -13,18 +13,23 @@
 .botao__header{
     display: none;
 }
-@media  screen and (max-width:767px){
+@media  screen and (min-width:320px) and (max-width:374px) {
     .texto__header{
-        background-color: #d1d0ca;
-        border: none;
-        border-radius: 5px;
-        width: 8rem;
-        height: 1.5rem;
-        margin-top: 0.5rem;
+        width: 7rem;
     }
 }
-@media screen and (min-width: 768px) and (max-width:1023px){
+@media  screen and (min-width:375px) and (max-width:424px) {
     .texto__header{
-        width: 12rem;
+        width: 7rem;
+    }
+}
+@media  screen and (min-width:425px) and (max-width:767px) {
+    .texto__header{
+        width: 10rem;
+    }
+}
+@media  screen and (min-width:768px) and (max-width:1023px) {
+    .texto__header{
+        width: 15rem;
     }
 }
