--- a/setup/static/css/header/lista.css
+++ b/setup/static/css/header/lista.css
@@ -5,13 +5,27 @@
     display: flex;
     margin-left: 1rem;
 }
-@media  screen and (max-width:767px){
+@media  screen and (min-width:320px) and (max-width:374px) {
     .lista__header{
-        margin-left: 1rem;
+        margin-left: 0;
+        background-color: #f5f5f5;
     }
 }
-@media screen and (min-width: 768px) and (max-width:1023px){
+@media  screen and (min-width:375px) and (max-width:424px) {
     .lista__header{
-        margin-left: 8rem;
+        margin-left: 0;
+        background-color: #f5f5f5;
+    }
+}
+@media  screen and (min-width:425px) and (max-width:767px) {
+    .lista__header{
+        margin-left: 0;
+        background-color: #f5f5f5;
+    }
+}
+@media  screen and (min-width:768px) and (max-width:1023px) {
+    .lista__header{
+        margin-left: 4rem;
+        background-color: #f5f5f5;
     }
 }
