--- a/setup/static/css/perfil/container_header.css
+++ b/setup/static/css/perfil/container_header.css
@@ -17,3 +17,30 @@
     margin-top: 0rem;
     margin-left: 17.2rem;
 }
+@media screen and (max-width: 767px) {
+    .container_header_bio__perfil{
+        width: 100%;
+        border-bottom: 1px solid #f5f5f5;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 5rem;
+    }
+    .container_header__perfil{
+        display: flex;
+        margin-left: 1rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .container_header_bio__perfil{
+        width: 100%;
+        border-bottom: 1px solid #f5f5f5;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 5rem;
+    }
+    .container_header__perfil{
+        display: flex;
+        margin-left: 0;
+    }
+    
+}
