--- a/setup/static/css/perfil/imagem.css
+++ b/setup/static/css/perfil/imagem.css
@@ -8,7 +8,15 @@
 .imagem_post__perfil{
     width: 100%;
     height: 20rem;
-    margin: 10%;
+}
+@media screen and (max-width: 767px) {
+    .imagem__perfil{
+        display: flex;
+        margin-left: 1rem;
+    }
+    .imagem_post__perfil{
+        height: 10rem;
+    }
 }
 @media screen and (min-width: 768px) and (max-width:1023px){
     .imagem_post__perfil{
