--- a/setup/static/css/perfil/titulo.css
+++ b/setup/static/css/perfil/titulo.css
@@ -3,3 +3,11 @@
     margin-top: 3rem;
     margin-left: 2rem;
 }
+@media screen and (max-width: 767px) {
+    .titulo__perfil{
+        width: 100%;
+        margin-top: 2rem;
+        margin-left: 1rem;
+        font-size: 1rem;
+    }
+}
