--- a/setup/static/css/postagem/titulo.css
+++ b/setup/static/css/postagem/titulo.css
@@ -14,11 +14,31 @@
     text-align: center;
     font-weight: bold;
     margin-top: 1rem;
+    width: 40%;
+    margin-left: 30%;
 }
-}
+
 @media  screen and (max-width:767px){
     .titulo__postagem{
         padding-top: 0;
         padding-left: 2rem;
+    }
+    .titulo_sempost__postagem{
+        font-size: 2rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 1rem;
+        width: 100%;
+        margin-left: 0;
+    }
+}
+@media  screen and (min-width:768px) and (max-width:1023px){
+    .titulo_sempost__postagem{
+        font-size: 2rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 1rem;
+        width: 100%;
+        margin-left: 0;
     }
 }
