--- a/setup/static/css/visualizar_post/container.css
+++ b/setup/static/css/visualizar_post/container.css
@@ -5,54 +5,69 @@
     margin-top: 10rem;
 }
 .container__post_imagem{
-    margin-left: 20rem;
+    margin-left: 30%;
     border: 1px solid #f5f5f5;
     height: 20rem;
+    width: 70%;
 }
 .container__post_comentario{
-    margin-right: 20rem;
     border: 1px solid #f5f5f5;
     height: 20rem;
     overflow: scroll;
     overflow-x: hidden;
+    width: 70%;
 }
 .container_perfil__post{
     display: flex;
     justify-content: space-between;
-    padding-left: 1rem;
     padding-bottom: 0.5rem;
     border-bottom: 1px solid #f5f5f5;
     padding-top: 0.5rem;
+    width: 100%;
 }
 .div_perfil__post{
     display: flex;
-    
+    margin-left: 1rem;
 }
 .container_comentario__postagem--comentario{
     padding-top: 0.5rem;
     display: flex;
     margin-bottom: 0.5rem;
-    margin-left: 40rem;
+    position: absolute;
+    width: auto;
+    top: 30rem;
 }
 @media  screen and (max-width:767px){
+    .container__post_grid{
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: none;
+    }
     .container__post_imagem{
         margin-left: 0;
+        width: 100%;
     }
     .container__post_comentario{
-        margin-right: 0;
-    }
-    .container_perfil__post{
-        padding-left: 0;
+        height: 15rem;
+        width: 100%;
     }
     .container_comentario__postagem--comentario{
-        margin-left: 10rem;
+        top: 46rem;
     }
 }
 @media screen and (min-width: 768px) and (max-width:1023px){
+    .container__post_imagem{
+        border: 1px solid #f5f5f5;
+        height: 20rem;
+        width: 60%;
+        margin-left: 40%;
+    }
     .container_comentario__postagem--comentario{
-        margin-left: 24rem;
+        width: auto;
+        top: 30rem;
     }
     .container_perfil__post{
-        padding-left: 1rem;
+        justify-content: space-evenly;
+        
     }
 }
