--- a/setup/static/css/visualizar_post/titulo.css
+++ b/setup/static/css/visualizar_post/titulo.css
@@ -9,7 +9,7 @@
     width: 30rem;
 }
 .input_texto__postagem--comentario{
-    width: 35%;
+    width: 30vw;
     background-color: white;
     border: none;
     border-radius: 10px;
@@ -21,37 +21,30 @@
 }
 .input_botao__postagem--comentario{
     border-radius: 10px;
-    width: 10%;
+    width: 5vw;
     border: none;
-    margin-left: 1rem;
     background-color: white;
 }
 @media  screen and (max-width:767px){
-    .titulo_perfil__post{
-        margin-left: 0.2rem;
+   .input_texto__postagem--comentario{
+       width: 80vw;
+   }
+   .input_botao__postagem--comentario{
+       width: 20vw;
+   }
+   .titulo_perfil__post--comentario{
+       width: 80%;
+   }
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+    .input_texto__postagem--comentario{
+        width: 26vw;
     }
-    .titulo_perfil__post--seg{
-        display: none;
+    .input_botao__postagem--comentario{
+        width: auto;
     }
     .titulo_perfil__post--comentario{
         word-wrap: break-word;
-        width: 5rem;
-    }
-    .input_texto__postagem--comentario{
-        width: 100%;
-    }
-    .input_botao__postagem--comentario{
-        display: none;
-    }
-}
-@media screen and (min-width: 768px) and (max-width:1023px){
-    input_botao__postagem--comentario{
-        display: none;
-    }
-    .input_texto__postagem--comentario {
-        width: 100%;
-    }
-    .titulo_perfil__post{
-        margin-left: 2rem;
+        width: 13vw;
     }
 }
